--- a/Assignment_3_Cifar10_Man.ipynb
+++ b/Assignment_3_Cifar10_Man.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "521f5865-3659-44fa-aac6-56c551c37746",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
     }
    ],
    "source": [
-    "model.fit(xt,yt, epochs = 5, validation_data = (tx,ty))"
+    "history = model.fit(xt,yt, epochs = 5, validation_data = (tx,ty))"
    ]
   },
   {
@@ -251,7 +251,16 @@
    "id": "65b2e60a-c13e-4224-9b14-e9e3c36b58cb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=  (12,4))\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.plot(history.history['loss'])\n",
+    "plt.plot(history.history['val_loss'])\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.plot(history.history['accuracy'])\n",
+    "plt.plot(history.history['val_accuracy'])\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
