--- a/Assignment_3_MNIST_Man.ipynb
+++ b/Assignment_3_MNIST_Man.ipynb
@@ -222,7 +222,16 @@
    "id": "88aa2e92-ff2a-4d1e-a06b-b21370b22d8a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=  (12,4))\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.plot(history.history['loss'])\n",
+    "plt.plot(history.history['val_loss'])\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.plot(history.history['accuracy'])\n",
+    "plt.plot(history.history['val_accuracy'])\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
